--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
           </div>
         </div>
       </div>
-      <script src="./assets/js/script.js"></script>
+      <footer>
+        <p>Copyright ©2022 Made By Leah Bredemeyer</p>
+      </footer>
+      <script src="./assets/js/script"></script>
     </body>
   </html>
