--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                   <a class="a-menu is-size-6 navbar-item" href="https://www.dropbox.com/sh/77s30zy4pwkl0zj/AADs0cMGWJnAwFiLAYOkfXQ0a?dl=0" alt="photography">photography</a>
                   <a class="a-menu is-size-6 navbar-item" href="https://www.dropbox.com/sh/l68bws5oxatxngk/AAAFyYarSjbu70kudK5K2zgpa?dl=0" alt="graphic design">graphic design</a>
                   <a class="a-menu is-size-6 navbar-item" href="https://github.com/lnbredemeyer" alt="github">coding</a>
+                  <a class="a-menu is-size-6 navbar-item" href="https://www.dropbox.com/s/mhgx9l2crym66em/LBredemeyer.pdf?dl=0" alt="github">resume</a>
                   <a class="a-menu is-size-6 navbar-item" href="mailto: lnbredemeyer@gmail.com">contact</a>
               </div>
             </div>
@@ -70,7 +71,7 @@
       </div>
     </section>
 
-    <section id="users-feed" class="section">
+    <section id="coding-work" class="section">
       <div class="container">
         <div class="content">
           <h1 class="title has-text-centered">Coding Work</h1>
@@ -93,6 +94,7 @@
                       to allow people to listen to music while searching for concert tickets.
                       <br><br>
                       View the repo here: <a href="https://github.com/lnbredemeyer/sound-scouter-p1" alt="sound scouter">click here</a>!
+                      View the website here: <a href="https://lnbredemeyer.github.io/sound-scouter-p1/" alt="sound scouter site">click here</a>!
                     </p>
                   </div>
                 </div>
@@ -112,7 +114,8 @@
                       We were tasked to create a weather dashboard to allow people to search a city, or choose one of the previously searched,
                       and that day's weather, humidity, wind, uv index and a 5 day forcast.
                       <br><br>
-                      View the repo here: <a href="https://github.com/lnbredemeyer/weather-dashboard-H6" alt="sound scouter">click here</a>!
+                      View the repo here: <a href="https://github.com/lnbredemeyer/weather-dashboard-H6" alt="weather dashboard">click here</a>!
+                      View the website here: <a href="https://lnbredemeyer.github.io/weather-dashboard-H6/" alt="weather dashboard site">click here</a>!
                     </p>
                   </div>
                 </div>
@@ -130,7 +133,8 @@
                       We were tasked to create a day planner that is color coded with future, current and overdue items, and
                       also allows you to type in by the hour items to do it and saves it in the local storage.
                       <br><br>
-                      View the repo here: <a href="https://github.com/lnbredemeyer/Work-Day-Scheduler-H5" alt="sound scouter">click here</a>! 
+                      View the repo here: <a href="https://github.com/lnbredemeyer/Work-Day-Scheduler-H5" alt="work day scheduler">click here</a>!
+                      View the website here: <a href="https://lnbredemeyer.github.io/Work-Day-Scheduler-H5/" alt="work day scheduler site">click here</a>! 
                     </p>
                   </div>
                 </div>
