--- a/index.html
+++ b/index.html
@@ -80,15 +80,10 @@
           <div class="column">
             <div class="box">
               <article class="media">
-                <div class="media-left">
-                  <figure class="is-64x64">
-                    <img src="./assets/Logo/Logo-1 copy.png">
-                  </figure>
-                </div>
                 <div class="media-content">
                   <div class="content">
                     <p>
-                      <strong>Project 1 - Sound Scouter</strong>
+                      <span class="sound"><strong>Project 1 - Sound Scouter<img src="./assets/images/SoundScouter1.png"></strong></span>
                       <br><br>
                       Working with KJ, Kevin, Matt & Nathan, we created a website utilizing the YouTube and TicketMaster APIs 
                       to allow people to listen to music while searching for concert tickets.
@@ -109,7 +104,7 @@
                 <div class="media-content">
                   <div class="content">
                     <p>
-                      <strong>Weather Dashboard</strong>
+                      <span class="weather"><strong>Weather Dashboard<img src="./assets/images/WeatherDashboard.png"></strong></span>
                       <br><br>
                       We were tasked to create a weather dashboard to allow people to search a city, or choose one of the previously searched,
                       and that day's weather, humidity, wind, uv index and a 5 day forcast.
@@ -128,7 +123,7 @@
                 <div class="media-content">
                   <div class="content">
                     <p>
-                      <strong>Day Planner</strong>
+                      <span class="planner"><strong>Day Planner<img src="./assets/images/DayPlanner.png"></strong></span>
                       <br><br>
                       We were tasked to create a day planner that is color coded with future, current and overdue items, and
                       also allows you to type in by the hour items to do it and saves it in the local storage.
@@ -223,6 +218,7 @@
           <p class="has-text-black is-size-7">Copyright ©2022 Made By Leah Bredemeyer</p><br>
           <a href="https://www.instagram.com/lnbredemeyer/" class="is-size-4 social-link"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           <a href="https://github.com/lnbredemeyer" class="is-size-4 social-link"><i class="fa fa-github" aria-hidden="true" style="color: black;"></i></a>
+          <a href="https://www.linkedin.com/in/leah-bredemeyer-b16b6974/" class="is-size-4 social-link"><i class="fa fa-linkedin" aria-hidden="true" style="color: black;"></i></a>
           <a href="https://www.instagram.com/adventuresoflnr/" class="is-size-4 social-link"><i class="fa fa-instagram" aria-hidden="true"></i></a>
       </div>
     </section>
