updates after project

--- a/index.html
+++ b/index.html
@@ -83,6 +83,64 @@
                 <div class="media-content">
                   <div class="content">
                     <p>
+                      <span class="sound"><strong>Project 2 - 90s Rewind<img src="./assets/images/"></strong></span>
+                      <br><br>
+                      Working with Cole, Matt & Shane, we created a website using an application and creates a marketplace for buyers, sellers, and fans of 90s footwear.
+                      <br><br>
+                      View the repo here: <a href="https://github.com/shanehancock64/GroupProject2" alt="90s rewind">click here</a>!
+                      View the website here: <a href="https://shanehancock64.github.io/GroupProject2/" alt="90s rewind site">click here</a>!
+                    </p>
+                  </div>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+        <div class="columns">
+          <div class="column">
+            <div class="box">
+              <article class="media">
+                <div class="media-content">
+                  <div class="content">
+                    <p>
+                      <span class="weather"><strong>E-Commerce Back End<img src="./assets/images/E-CommerceBackEnd.png"></strong></span>
+                      <br><br>
+                      To build the back end for an e-commerce site by modifying starter code by configuring a working Express.js API to use Sequelize to interact with a MySQL database.
+                      <br><br>
+                      View the repo here: <a href="https://github.com/lnbredemeyer/Object-Relational-Mapping-H13" alt="e-commerce back end">click here</a>!
+                      View the video here: <a href="https://youtu.be/W_-CxzDOOrA" alt="youtube">click here</a>!
+                    </p>
+                  </div>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="column">
+            <div class="box">
+              <article class="media">
+                <div class="media-content">
+                  <div class="content">
+                    <p>
+                      <span class="planner"><strong>Day Planner<img src="./assets/images/EmploymentManagementSystem.png"></strong></span>
+                      <br><br>
+                      To be able to view and manage the departments, roles, and employees in my company so that I can organize and plan my business.
+                      <br><br>
+                      View the repo here: <a href="https://github.com/lnbredemeyer/Employee-Tracker-H12" alt="employee tracker">click here</a>!
+                      View the video here: <a href="https://youtu.be/lYlIFH6_cbw" alt="youtube">click here</a>! 
+                    </p>
+                  </div>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+        <div class="columns">
+          <div class="column">
+            <div class="box">
+              <article class="media">
+                <div class="media-content">
+                  <div class="content">
+                    <p>
                       <span class="sound"><strong>Project 1 - Sound Scouter<img src="./assets/images/SoundScouter1.png"></strong></span>
                       <br><br>
                       Working with KJ, Kevin, Matt & Nathan, we created a website utilizing the YouTube and TicketMaster APIs 
