updated links to open a new tab and added screenshots

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </div>
             <div class="navbar-menu">
               <div class="navbar-end">
-                  <a class="a-menu is-size-6 navbar-item" href="https://www.dropbox.com/sh/77s30zy4pwkl0zj/AADs0cMGWJnAwFiLAYOkfXQ0a?dl=0" alt="photography">photography</a>
-                  <a class="a-menu is-size-6 navbar-item" href="https://www.dropbox.com/sh/l68bws5oxatxngk/AAAFyYarSjbu70kudK5K2zgpa?dl=0" alt="graphic design">graphic design</a>
-                  <a class="a-menu is-size-6 navbar-item" href="https://github.com/lnbredemeyer" alt="github">coding</a>
-                  <a class="a-menu is-size-6 navbar-item" href="https://www.dropbox.com/s/mhgx9l2crym66em/LBredemeyer.pdf?dl=0" alt="github">resume</a>
-                  <a class="a-menu is-size-6 navbar-item" href="mailto: lnbredemeyer@gmail.com">contact</a>
+                  <a class="a-menu is-size-6 navbar-item" href="https://www.dropbox.com/sh/77s30zy4pwkl0zj/AADs0cMGWJnAwFiLAYOkfXQ0a?dl=0" alt="photography" target="_blank" rel="noopener noreferrer">photography</a>
+                  <a class="a-menu is-size-6 navbar-item" href="https://www.dropbox.com/sh/l68bws5oxatxngk/AAAFyYarSjbu70kudK5K2zgpa?dl=0" alt="graphic design" target="_blank" rel="noopener noreferrer">graphic design</a>
+                  <a class="a-menu is-size-6 navbar-item" href="https://github.com/lnbredemeyer" alt="github" target="_blank" rel="noopener noreferrer">coding</a>
+                  <a class="a-menu is-size-6 navbar-item" href="https://www.dropbox.com/s/mhgx9l2crym66em/LBredemeyer.pdf?dl=0" alt="github" target="_blank" rel="noopener noreferrer">resume</a>
+                  <a class="a-menu is-size-6 navbar-item" href="mailto: lnbredemeyer@gmail.com" target="_blank" rel="noopener noreferrer">contact</a>
               </div>
             </div>
             <span class="navbar-burger burger" data-target="navbarMenuHeroA">
@@ -83,7 +83,7 @@
                 <div class="media-content">
                   <div class="content">
                     <p>
-                      <span class="sound"><strong>Project 2 - 90s Rewind<img src="./assets/images/"></strong></span>
+                      <span class="sound"><strong>Project 2 - 90s Rewind<img src="./assets/images/nineties-rewind.jpg"></strong></span>
                       <br><br>
                       Working with Cole, Matt & Shane, we created a website using an application and creates a marketplace for buyers, sellers, and fans of 90s footwear.
                       <br><br>
@@ -274,10 +274,10 @@
     <section id="footer" class="section">
       <div class="container has-text-centered">
           <p class="has-text-black is-size-7">Copyright ©2022 Made By Leah Bredemeyer</p><br>
-          <a href="https://www.instagram.com/lnbredemeyer/" class="is-size-4 social-link"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a href="https://github.com/lnbredemeyer" class="is-size-4 social-link"><i class="fa fa-github" aria-hidden="true" style="color: black;"></i></a>
-          <a href="https://www.linkedin.com/in/leah-bredemeyer-b16b6974/" class="is-size-4 social-link"><i class="fa fa-linkedin" aria-hidden="true" style="color: black;"></i></a>
-          <a href="https://www.instagram.com/adventuresoflnr/" class="is-size-4 social-link"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/lnbredemeyer/" class="is-size-4 social-link" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          <a href="https://github.com/lnbredemeyer" class="is-size-4 social-link" target="_blank" rel="noopener noreferrer"><i class="fa fa-github" aria-hidden="true" style="color: black;"></i></a>
+          <a href="https://www.linkedin.com/in/leah-bredemeyer-b16b6974/" class="is-size-4 social-link" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" aria-hidden="true" style="color: black;"></i></a>
+          <a href="https://www.instagram.com/adventuresoflnr/" class="is-size-4 social-link" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram" aria-hidden="true"></i></a>
       </div>
     </section>
   </div>
